# fieldopsenv-openenv

./: .gitignore  Dockerfile  README.md  app.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
