[project]
name = "fieldopsenv"
version = "0.1.0"
description = "OpenEnv Autonomous Field Robotics Environment"
authors = [
    { name = "Ranbir", email = "your@email.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"